--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                 <label for="check" class="logo"><a href="index.html">AJC EDDY</a></label>
                 <nav>
 
+
+
                     <!-- Navigation menu links -->
                     <ul class="menu">
                         <li><a href="downloadcv.html">Download CV</a></li>
@@ -58,7 +60,23 @@
                         </label>
 
                     </div>
+
+                    
+                    <!--Hamburber menu for small size screen-->
+                    <button class="hamburger">
+                        <div class="bar"></div>
+                    </button>
+
+                    <!--Mobile navigation menu-->
+                    <nav class="mobile-nav">
+                        <a href="downloadcv.html">Download CV</a>
+                        <a href="contact.html">Contact</a>
+                    </nav>
+
                 </nav>
+
+
+
             </header>
         </div>
     </header>
@@ -227,6 +245,9 @@
         </div>
     </footer>
 
+
+    
+
     <!-- JavaScript for Dark Mode Functionality -->
     <script>
         // Element references for theme toggle switch
@@ -247,8 +268,21 @@
                 themeSwitch.checked = true; // Set switch to checked state
             }
         };
+
+        // Select the hamburger button element
+        const hamburger = document.querySelector('.hamburger');
+        const mobile_menu = document.querySelector('.mobile-nav');
+
+        // Add an event listener for click events on the hamburger button
+        hamburger.addEventListener('click', () => {
+            // Toggle the 'is-active' class to switch between hamburger and cross states
+            hamburger.classList.toggle('is-active');
+            mobile_menu.classList.toggle('is-active');
+});
+
     </script>
 
+   
 </body>
 
 </html>
