--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -36,21 +36,38 @@
                 <header class="header-container">
                     <!-- Logo with a link back to the home page -->
                     <label for="check" class="logo"><a href="index.html">AJC EDDY</a></label>
-                    <nav>
-                        <!-- Navigation menu links -->
-                        <ul class="menu">
-                            <li><a href="downloadcv.html">Download CV</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                        <!-- Dark Mode Toggle switch -->
-                        <div class="theme-toggle">
-                            <input type="checkbox" id="theme-switch">
-                            <label for="theme-switch" class="toggle-label" aria-label="Toggle dark mode">
-                                <!-- Font Awesome icon for moon (dark mode indicator) -->
-                                <i class="fas fa-moon"></i> Dark Mode
-                            </label>
-                        </div>
+                <nav>
+
+
+
+                    <!-- Navigation menu links -->
+                    <ul class="menu">
+                        <li><a href="downloadcv.html">Download CV</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+
+                    <!-- Dark Mode Toggle switch -->
+                    <div class="theme-toggle">
+                        <input type="checkbox" id="theme-switch">
+                        <label for="theme-switch" class="toggle-label" aria-label="Toggle dark mode">
+                            <i class="fas fa-moon"></i> Dark Mode
+                        </label>
+
+                    </div>
+
+                    
+                    <!--Hamburber menu for small size screen-->
+                    <button class="hamburger">
+                        <div class="bar"></div>
+                    </button>
+
+                    <!--Mobile navigation menu-->
+                    <nav class="mobile-nav">
+                        <a href="downloadcv.html">Download CV</a>
+                        <a href="contact.html">Contact</a>
                     </nav>
+
+                </nav>
                 </header>
             </div>
         </header>
