--- a/downloadcv.html
+++ b/downloadcv.html
@@ -171,6 +171,16 @@
                 themeSwitch.checked = true; // Check the theme switch to reflect the current mode
             }
         };
+
+        
+        // Load the preferred theme on page load
+        window.onload = () => {
+            const savedTheme = localStorage.getItem('theme');
+            if (savedTheme === 'dark') {
+                document.body.classList.add('dark-mode'); // Apply dark mode if saved
+                themeSwitch.checked = true; // Check the toggle
+            }
+        };
     </script>
 </body>
 
