--- a/otherskills.html
+++ b/otherskills.html
@@ -261,14 +261,17 @@
         };
 
         
-        // Load the preferred theme on page load
-        window.onload = () => {
-            const savedTheme = localStorage.getItem('theme');
-            if (savedTheme === 'dark') {
-                document.body.classList.add('dark-mode'); // Apply dark mode if saved
-                themeSwitch.checked = true; // Check the toggle
-            }
-        };
+        // Select the hamburger button element
+        const hamburger = document.querySelector('.hamburger');
+        const mobile_menu = document.querySelector('.mobile-nav');
+
+        // Add an event listener for click events on the hamburger button
+        hamburger.addEventListener('click', () => {
+            // Toggle the 'is-active' class to switch between hamburger and cross states
+            hamburger.classList.toggle('is-active');
+            mobile_menu.classList.toggle('is-active');
+});
+
     </script>
 
 </body>
