--- a/downloadcv.html
+++ b/downloadcv.html
@@ -120,23 +120,21 @@
     </div>
    
 
-    <!-- Footer Section -->
+    <!-- Footer Section with Contact Details -->
     <footer class="footer">
-        <div class="container">
-            <!-- Footer Contact Details -->
-            <div class="footer-contact">
-                <h2>Contact Me</h2>
-                <p><strong>Name:</strong> Assy Jean-Claude EDDY</p>
-                <p><strong>Phone:</strong> +44 7 42 42 42 793</p>
-                <p><strong>Email:</strong> <a href="mailto:ajceddy@gmail.com">ajceddy@gmail.com</a></p>
-                <a aria-label="Chat on WhatsApp" href="https://wa.me/00447424242793">
-                    <img alt="Chat on WhatsApp" src="WhatsAppButtonGreenLarge.png"/>
-                </a>
+        <div class="contact-container">
+            <!-- Contact Information -->
+            <div class="contact-info">
+                <h2>Contact Details</h2>
+                <p><i class="fas fa-user"></i> <strong>Name:</strong> Assy Jean-Claude EDDY</p>
+                <p><i class="fas fa-phone"></i> <strong>Phone:</strong> +44 7 42 42 42 793</p>
+                <p><i class="fas fa-envelope"></i> <strong>Email:</strong> <a href="mailto:ajceddy@gmail.com">ajceddy@gmail.com</a></p>
+                <p><i class="fas fa-map-marker-alt"></i> <strong>Location:</strong> Wolverhampton, United Kingdom</p>
             </div>
 
-            <!-- Footer Contact Form -->
-            <div class="footer-form">
-                <h2>Get In Touch</h2>
+            <!-- Contact Form -->
+            <div class="contact-form">
+                <h2>Send a Message</h2>
                 <form action="#" method="POST">
                     <div class="form-group">
                         <input type="text" name="name" placeholder="Your Name" required>
@@ -145,14 +143,14 @@
                         <input type="email" name="email" placeholder="Your Email" required>
                     </div>
                     <div class="form-group">
-                        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+                        <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
                     </div>
                     <button type="submit" class="submit-btn">Send Message</button>
                 </form>
             </div>
         </div>
 
-        <!-- Footer Bottom -->
+        <!-- Footer Bottom with copyright notice -->
         <div class="footer-bottom">
             <p>&copy; 2024 Assy Jean-Claude EDDY. All rights reserved.</p>
         </div>
