--- a/cplus.html
+++ b/cplus.html
@@ -56,8 +56,11 @@
 
                     <!--Mobile navigation menu-->
                     <nav class="mobile-nav">
+
+                        <a href="skills.html">SKILLS</a>
                         <a href="downloadcv.html">Download CV</a>
                         <a href="contact.html">Contact</a>
+                        
                     </nav>
 
                 </nav>
